Update to draft ttt config install